--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
+    "swagger-ui-dist": "^5.9.1",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
