--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "name": "evira",
     "builds": [
         {
-            "src": "./server.js",
+            "src": "./app.js",
             "use": "@vercel/node"
         }
     ],
