--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
+    "node-cron": "^3.0.3",
     "swagger-ui-dist": "^5.9.1",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
