modified response in checkout API

--- a/api_docs/Evira.yaml
+++ b/api_docs/Evira.yaml
@@ -1161,7 +1161,7 @@ paths:
                 amount: 945015
       responses:
         '200':
-          description: array of orderIds
+          description: empty object
           content:
             application/json: {}
   /checkout/payment-methods:
