--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-status": "^1.7.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
+    "nodemailer": "^6.9.9",
     "swagger-ui-dist": "^5.9.1",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
