did changes in products list apis

--- a/api_docs/Evira.yaml
+++ b/api_docs/Evira.yaml
@@ -776,6 +776,7 @@ paths:
           schema:
             type: string
             format: objectId
+          required: true
           description: objectId for the category
         - name: page
           in: query
