--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sanket Talaviya",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1597.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
