file upload functionality done

--- a/api_docs/Evira.yaml
+++ b/api_docs/Evira.yaml
@@ -30,6 +30,7 @@ tags:
   - name: Orders
   - name: FAQs
   - name: Messages
+  - name: Admin Root
   - name: Admin Users
   - name: Admin Categories
   - name: Admin Products
@@ -494,6 +495,33 @@ paths:
       responses:
         '200':
           description: arrays of offers, categories & products
+          content:
+            application/json: {}
+  /upload:
+    post:
+      tags:
+        - Root
+      security:
+        - userAuth: []
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                type:
+                  type: string
+                  enum: [user]
+                file:
+                  type: string
+                  format: binary
+              required:
+                - type
+              example:
+                type: user
+      responses:
+        '200':
+          description: signed url of uploaded file
           content:
             application/json: {}
   /notifications:
@@ -1334,6 +1362,33 @@ paths:
       responses:
         '200':
           description: created message object
+          content:
+            application/json: {}
+  /admin/upload:
+    post:
+      tags:
+        - Admin Root
+      security:
+        - adminAuth: []
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                type:
+                  type: string
+                  enum: [category, product, offer, user]
+                file:
+                  type: string
+                  format: binary
+              required:
+                - type
+              example:
+                type: product
+      responses:
+        '200':
+          description: signed url of uploaded file
           content:
             application/json: {}
   /admin/users:
