--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "swagger-ui-dist": "^5.9.1",
     "swagger-ui-express": "^5.0.0",
