--- a/api_docs/Evira.yaml
+++ b/api_docs/Evira.yaml
@@ -517,6 +517,7 @@ paths:
                   format: binary
               required:
                 - type
+                - file
               example:
                 type: user
       responses:
@@ -1384,6 +1385,7 @@ paths:
                   format: binary
               required:
                 - type
+                - file
               example:
                 type: product
       responses:
