--- a/api_docs/Evira.yaml
+++ b/api_docs/Evira.yaml
@@ -549,6 +549,16 @@ paths:
           description: notifications array
           content:
             application/json: {}
+    delete:
+      tags:
+        - Notifications
+      security:
+        - userAuth: []
+      responses:
+        '200':
+          description: empty object
+          content:
+            application/json: {}
   /notifications/{notificationId}:
     delete:
       tags:
@@ -2212,7 +2222,7 @@ paths:
           in: query
           schema:
             type: string
-            enum: [ongoing, completed]
+            enum: [all, ongoing, completed]
           required: true
           description: type or status of orders
         - name: page
